--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>GIthub Workflows</head>
     <body>
-        <p>This is fit hub Actions demo</p>
+        <p>This is first, github Actions demo</p>
     </body>
 </html>
